Fix overextended form
Fix the bug where the iframe extended too far on mobile devices. More updates will be needed if this doesn't work.

--- a/styles.css
+++ b/styles.css
@@ -163,27 +163,12 @@ input {
   background-color: #AAA;
 }
 
-div.fbox {
-  position: relative;
-  padding-top: 40vh;
-  margin: 10px;
-  height: auto;
-}
-
 .form {
-  top: 0;
-  left: 0;
-  position: absolute;
   width: 100%;
-  height: 100%;
+  height: calc(40vw - 20vh);
 }
 
 @media only screen and (max-width: 600px){
-  div.fbox {
-    padding-top: 0px;
-    margin: 10px;
-    height: auto;
-  }
 
   .form {
     position: relative;
